# FreeRDP

./: .gitignore  CLAUDE.md
channels/drive/client/: drive_file.c
channels/rdpdr/server/: rdpdr_main.c
docs/: architecture-overview.md  channels-architecture.md  libfreerdp-architecture.md  macOS_server_with_fuse.md  tsclient_server.md  winpr-architecture.md
include/freerdp/server/: rdpdr.h
server/: CMakeLists.txt
server/tsclient/: CMakeLists.txt  path_mapper.cpp  path_mapper.h  rdp_server_core.cpp  rdp_server_core.h  rdpdr_backend.cpp  rdpdr_backend.h  rdpdr_transport.h  tsclient_tests.cpp  tsclientd.cpp  ttl_cache.h  vfs_frontend.cpp  vfs_frontend.h  winfsp_frontend.cpp  winfsp_frontend.h
